# c2ba-filesystem

./: CMakeLists.txt  README.md
lib/cmake/: info.hpp.in
lib/include/c2ba/filesystem/: filesystem.hpp
lib/src/: filesystem.cpp
tests/: headers_compilation_test.cpp.in  main.cpp
